bin/testsuite/tests/compiler/src/errors/compiler4937.swg
#global testerror "Err0322"

func const toto()
{
}